# langchain-nimble

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: nimbleway.ipynb  retrievers.ipynb
examples/: web_search_agent.py
langchain_nimble/: __init__.py  _types.py  _utilities.py  extract_tool.py  retrievers.py  search_tool.py  toolkit.py
langchain_nimble/tools/: __init__.py  agent_tool.py  crawl_tool.py  extract_tool.py  map_tool.py  search_tool.py
tests/integration_tests/: test_retriever.py  test_retrievers.py  test_standard.py  test_tools.py
tests/unit_tests/: test_agent_tool.py  test_chat_models.py  test_crawl_tool.py  test_embeddings.py  test_error_handling.py  test_imports.py  test_map_tool.py  test_standard.py  test_toolkit.py  test_tools.py  test_utilities.py
