[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-nimble"
version = "2.0.0"
description = "An integration package connecting Nimble and LangChain"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.3.15,<0.4.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/Nimbleway/langchain-nimble"
Repository = "https://github.com/Nimbleway/langchain-nimble"
"Source Code" = "https://github.com/langchain-ai/langchain/tree/master/libs/partners/nimble"
"Release Notes" = "https://github.com/langchain-ai/langchain/releases?q=tag%3A%22nimble%3D%3D0%22&expanded=true"

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-socket>=0.7.0",
    "pytest-watcher>=0.3.4",
    "langchain-tests==0.3.10",
]
lint = [
    "ruff>=0.5",
]
typing = [
    "mypy>=1.10",
]
codespell = [
    "codespell>=2.2.6",
]
dev = [
    "langchain-nimble[test,lint,typing,codespell]",
]

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
