[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-nimble"
version = "2.0.0"
description = "LangChain integration for Nimble's web search and content retrieval API"
license = { text = "MIT" }
readme = "README.md"
authors = []

requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-core>=0.3.15,<0.4.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://www.nimbleway.com"
Documentation = "https://docs.langchain.com/oss/python/integrations/providers/nimble"
Repository = "https://github.com/Nimbleway/langchain-nimble"
Changelog = "https://github.com/Nimbleway/langchain-nimble/releases"
Twitter = "https://x.com/LangChainAI"
Slack = "https://www.langchain.com/join-community"

[dependency-groups]
test = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.23.2,<1.0.0",
    "pytest-socket>=0.7.0,<1.0.0",
    "pytest-watcher>=0.3.4,<1.0.0",
    "langchain-tests>=0.3.10,<0.4.0",
]
test_integration = []
lint = [
    "ruff>=0.5,<1.0",
]
typing = [
    "mypy>=1.10,<2.0",
]

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
